fix header overlap

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -10,6 +10,8 @@
 
   background-color: var(--color-background-a80);
   backdrop-filter: blur(2px);
+
+  z-index: 1;
 }
 
 .heading {
@@ -30,7 +32,7 @@
 
 .navigation {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   gap: var(--spacing-8);
 
